<resources>
    <string name="app_name">Everyone must find their</string>
    <string name="logs_js_with_reg">inject_js_with_reg_pin</string>
    <string name="logs_web_route">web_route_pin</string>
    <string name="logs_service_route">service_route_pin</string>
    <string name="logs_fail_uri_parse">fail_uri_parse_pin</string>
    <string name="logs_deposit">js_deposit_pin</string>
    <string name="logs_register">js_register_pin</string>
    <string name="loadipng_user_agent">okEveryone must find their</string>
    <string name="game">game</string>
    <string name="set">set</string>
    <string name="keep_on">keep on</string>
    <string name="new_game">new game</string>
    <string name="back">back</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="sound">sound</string>
    <string name="num_cards_6">num cards 6</string>
    <string name="num_cards_8">num cards 8</string>
    <string name="num_cards_10">num cards 10</string>
    <string name="num_cards_12">num cards 12</string>
    <string name="num_cards">num_cards</string>
    <string name="continue_game">continue</string>
    <string name="menu">menu</string>
    <string name="pause">pause</string>
    <string name="card_1">card_1</string>
    <string name="card_2">card_2</string>
    <string name="card_3">card_3</string>
    <string name="card_5">card_5</string>
    <string name="card_6">card_6</string>
    <string name="card_4">card_4</string>
    <string name="card_7">card_7</string>
    <string name="card_8">card_8</string>
    <string name="card_9">card_9</string>
    <string name="card_10">card_10</string>
    <string name="card_11">card_11</string>
    <string name="card_12">card_12</string>
</resources>