<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_option">

    <ImageButton
        android:id="@+id/option_back_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main_back" />

    <ImageView
        android:id="@+id/option_number_of_cards_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/num_cards"
        app:layout_constraintBottom_toTopOf="@+id/option_num_cards_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_option_number_of_cards" />

    <LinearLayout
        android:id="@+id/option_num_cards_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/option_sound_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/option_num_cards_6_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_option_num_card_6"
            android:contentDescription="@string/num_cards_6" />

        <ImageButton
            android:id="@+id/option_num_cards_8_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_option_num_card_8"
            android:contentDescription="@string/num_cards_8" />

        <ImageButton
            android:id="@+id/option_num_cards_10_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_option_num_card_10"
            android:contentDescription="@string/num_cards_10" />

        <ImageButton
            android:id="@+id/option_num_cards_12_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_option_num_card_12_top"
            android:contentDescription="@string/num_cards_12"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/option_sound_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/sound"
        app:layout_constraintBottom_toTopOf="@+id/option_sound_linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_option_sound" />

    <LinearLayout
        android:id="@+id/option_sound_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/option_sound_off_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_option_sound_off_not_selected"
            android:contentDescription="@string/off" />

        <ImageButton
            android:id="@+id/option_sound_on_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_option_sound_on_not_selected"
            android:contentDescription="@string/on" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />
</androidx.constraintlayout.widget.ConstraintLayout>