<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_two_twelve_cards">

    <ImageButton
        android:id="@+id/main_two_twelve_cards_back_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main_back" />

    <ImageButton
        android:id="@+id/main_two_twelve_cards_pause_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/transparent"
        android:contentDescription="@string/pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_pause" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <LinearLayout
        android:id="@+id/main_two_twelve_cards_left_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/main_two_twelve_cards_back_img_btn">

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_1" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_2" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_two_twelve_cards_right_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/main_two_twelve_cards_back_img_btn">

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_4" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_5" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_two_twelve_cards_center_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_two_twelve_cards_right_linear_layout"
        app:layout_constraintStart_toEndOf="@+id/main_two_twelve_cards_left_linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/main_two_twelve_cards_back_img_btn">

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_7" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_8" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_two_twelve_cards_top_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/main_two_twelve_cards_center_linear_layout"
        app:layout_constraintEnd_toStartOf="@+id/main_two_twelve_cards_right_linear_layout"
        app:layout_constraintStart_toEndOf="@+id/main_two_twelve_cards_left_linear_layout">

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_9" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_two_twelve_cards_right_linear_layout"
        app:layout_constraintStart_toEndOf="@+id/main_two_twelve_cards_left_linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/main_two_twelve_cards_center_linear_layout">

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_11" />

        <ImageButton
            android:id="@+id/main_two_twelve_cards_card_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_main_two_card_back"
            android:contentDescription="@string/card_12" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>